updated body background gradient to try to fix white background bug on home page by the end of the squirrel jump animation

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -505,11 +505,30 @@ body.modern-theme {
   --body-background-color: #122438;
   --body-background: linear-gradient(135deg, var(--body-background-color) 34%,rgb(10, 4, 23) 100%);
   
+
+
+  background: var(--body-background-color);
+  background: -moz-linear-gradient(100deg, var(--body-background-color) 34%, rgba(10,4,23,1) 100%);
+  background: -webkit-linear-gradient(100deg, var(--body-background-color) 34%, rgba(10,4,23,1) 100%);
+  background: linear-gradient(100deg, var(--body-background-color) 34%, rgba(10,4,23,1) 100%);
 }
 
 .modern-theme #menu {
   background: #050215; 
 }
+
+/* bordered transparent menu */
+/* .modern-theme #menu {
+  background: #050215c6;
+  border-right: 1px solid var(--color-subtle);
+}
+@media (max-width: 960px) {
+  .modern-theme #menu {
+    border-right: none;
+    border-top: 1px solid var(--color-subtle);
+  }
+} */
+
 .modern-theme #art {
   opacity: .8;
   -webkit-filter: hue-rotate(180deg);
